[fix] contact form

--- a/src/styles/contact_section.css
+++ b/src/styles/contact_section.css
@@ -1,7 +1,7 @@
 .contactSection {
     /* background-color: gray; */
    background-color:#e1da1e;
-   width: 100%;
+   /* width: 100%; */
    padding: 4rem;
    background-image: url(../../public/pxfuel.jpg);
 }
