--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body * {
     height: 100vh;
     width: 100%;
     position: fixed;
-    background-image: url(../../public/minutes.jpeg);
+    background-image: url(../public/minutes.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -41,7 +41,7 @@ body * {
   background-color:#e1da1e;
   /* width: 100%; */
   padding: 4rem;
-  background-image: url(../../public/pxfuel.jpg);
+  background-image: url(../public/pxfuel.jpg);
   font-size: 1.5rem;
   color: #054998;
   text-align: center;
